2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* adjust.test: More boilerplate simplified via use of test support.
	* adjust_hyph.test:
	* expander.test:
	* repeat.test:
	* split.test:
	* tabify.test:
	* textutil.test:
	* trim.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* adjust.test: Hooked into the new common test support code.
	* adjust_hyph.test:
	* expander.test:
	* repeat.test:
	* split.test:
	* tabify.test:
	* textutil.test:
	* trim.test:

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* expander.tcl (::textutil::expander::Op_cpush): Applied the patch
	  for [SF Tcllib Bug 1376637], as supplied by Sarnold
	  <sarnold75@users.sourceforge.net>. Fixes an initialization error
	  for contexts, where the location data is not set.

	* expander.test: Modified an existing test to fail for the
	  original error, it does not anymore with the fix applied.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-04-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* adjust.tcl (indent): Fixed bug in handling of leading
	  whitespace. We must not remove it before indentation. We can
	  remove only trailing whitespace (text, and per line). Did a
	  little micro-optimization to reduce the size of the bytecode.

	* adjust.test: Added tests which check the non-removal of leading
	  whitespace by 'indent'.

2005-02-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* split.tcl:   Accepted [SF Tcllib Patch 1063774] and added
	* splitn.test: the proposed splitn command. The testsuite has
	* textutil.man: been extended as well, and the documentation
	  too.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-07-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
